[package]
name = "radixsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-platinum-prover = {path = "src/lambdaworks/provers/cairo"}
hex = "0.4.3"
hex-wrapper = { version = "1.4.1", features = ["rand"]}